build: introduce bootstrap playbook and ssh port config
Introduced a new bootstrap playbook for initial server setup and added configuration for custom SSH ports to improve deployment flexibility and security.

- Created `bootstrap.yml` playbook for initial server setup.
- Added a `bootstrap` target to the `Makefile` for executing the bootstrap playbook.
- Updated `README.md` to include instructions for running the bootstrap playbook.
- Renamed `makefiles/deploy.mk` to `Makefile` and integrated deploy logic.
- Modified `provisioning.yml` to target the `sample` host group and use the `server_preparations` role.
- Introduced `roles/bashrc` role for managing `.bashrc` files for admin and root users.
- Renamed `roles/server_general_preparations` to `roles/server_preparations` for clarity.
- Moved user management and SSH configuration tasks to `roles/ssh_and_user_bootstrap`.
- Added `server_ssh_port` variable to `inventories/sample/group_vars/all.yml` for custom SSH port configuration.
- Updated `inventories/sample/inventory` to include `ansible_port` for the `provision-server` host.
- Added `roles/ssh_and_user_bootstrap/templates/authorized_keys.j2` for managing authorized keys.
- Updated `roles/ssh_and_user_bootstrap/templates/sshd_config.j2` to include the `server_ssh_port` variable.
- Removed the old `roles/users` role.

--- a/roles/ssh_and_user_bootstrap/templates/sshd_config.j2
+++ b/roles/ssh_and_user_bootstrap/templates/sshd_config.j2
@@ -1,5 +1,6 @@
 # Ansible managed: /etc/ssh/sshd_config.d/10-ansible.conf
 
+Port {{ server_ssh_port }}
 Protocol 2
 # for faster sshing we do not need dns, but later it might be needed to be used with bastion or something
 UseDNS no
