chore(config): comment out unused tmux and opencloud settings
Commented out several configuration settings in tmux and opencloud roles that are no longer in use or are being managed elsewhere. This cleans up the configuration files and prevents potential conflicts.

- Commented out `set -g mouse on` in `.tmux.conf.j2` as it's likely managed by a plugin or a different configuration.
- Commented out `set -g @plugin 'noscript/tmux-mighty-scroll'` in `.tmux.conf.j2` as the plugin is no longer needed.
- Commented out `set -g @dracula-theme "dark"` in `.tmux.conf.j2` as the theme is likely set by the Dracula plugin itself.
- Changed `opencloud_files_directory` to `{{ files_home }}/` in `opencloud/defaults/main.yml` to use the root of the files home directory.
- Commented out tasks for removing opencloud container and config directories in `opencloud/tasks/main.yml` as these are no longer required.

--- a/roles/home_folder/templates/.tmux.conf.j2
+++ b/roles/home_folder/templates/.tmux.conf.j2
@@ -1,4 +1,4 @@
-set -g mouse on
+{# set -g mouse on #}
 
 # Indices
 set -g base-index 1
@@ -19,12 +19,12 @@ bind c new-window -c "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jaclu/tmux-menus'
-set -g @plugin 'noscript/tmux-mighty-scroll'
+{# set -g @plugin 'noscript/tmux-mighty-scroll' #}
 set -g @plugin 'dracula/tmux'
 
 # Theme
 set -g @dracula-plugins "cpu-usage ram-usage"
-set -g @dracula-theme "dark"
+{# set -g @dracula-theme "dark" #}
 
 {# C-b Space = menu #}
 set -g @menus_trigger 'Space'
